--- a/index.html
+++ b/index.html
@@ -33,31 +33,35 @@
           <h2>Welcome to the last pub of the 12's tour</h2>
           <div class="photo2">
             <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam harum deserunt non amet commodi quasi inventore magni vel voluptates distinctio?
-            Quam eaque omnis architecto, sunt, obcaecati vero rerum excepturi minus itaque non perspiciatis ullam pariatur, soluta mollitia recusandae ducimus officiis!
-            Facilis corporis debitis, ducimus, perspiciatis enim doloribus autem deleniti aspernatur, est at adipisci nesciunt earum numquam cupiditate odit veritatis et?
+            Lorem ipsum dolor, sit amet consectetur adipisicing.
+            At mollitia, reprehenderit repellat est autem itaque.
+            Molestias tenetur sit rem. Debitis, doloribus fugiat.
           </p>
         </div>
           <button type="button" class="button">DISCOVER</button>
         </section>
       </div>
       <div class="div2">
-        <section class="concert">
-          <svg class="music" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M499.1 6.3c8.1 6 12.9 15.6 12.9 25.7v72V368c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V147L192 223.8V432c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V200 128c0-14.1 9.3-26.6 22.8-30.7l320-96c9.7-2.9 20.2-1.1 28.3 5z"/></svg>
+        <div class="concert">
+         <section  >
+          <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M499.1 6.3c8.1 6 12.9 15.6 12.9 25.7v72V368c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V147L192 223.8V432c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V200 128c0-14.1 9.3-26.6 22.8-30.7l320-96c9.7-2.9 20.2-1.1 28.3 5z"/></svg>
           <h3>Concert every week-end</h3>
           <p>
             Lorem ipsum dolor sit amet.
           </p>
         </section>
-        <section class="open">
+      </div>
+      <div class="clock">
+        <section >
           <!-- <i class="fa-solid fa-clock fa-10x"></i> -->
-          <svg class="clock" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 0a256 256 0 1 1 0 512A256 256 0 1 1 256 0zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
+          <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 0a256 256 0 1 1 0 512A256 256 0 1 1 256 0zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
           <h3>Open7j/7</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur.
           </p>
         </section>
       </div>
+      
         </section>
       </div>
       <div class="div3">
