--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
   <body>
     <header>
       <a href="index.html"><h1>THE WORLD'S END</h1></a>
+
       <a href="index.html" class="head head1">Homepage</a>
       <a href="find.html" class="head head2">Find Us</a>
       <a href="form.html" class="head head3">Contact</a>
@@ -54,7 +55,9 @@
       </div>
     </main>
     <footer>
-      <p>Copyrigh - The world's end-2024</p>
+      <div class="p2">
+        <p>Copyrigh - The world's end-2024</p>
+      </div>
     </footer>
   </body>
 </html>
