--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <header>
       <a href="index.html"><h1>THE WORLD'S END</h1></a>
       
-      <a href="index.html" class="head head1">Homepage</a>
-      <a href="find.html" class="head head2">Find Us</a>
-      <a href="form.html" class="head head3">Contact</a>
-    
+      <a href="index.html" class="head  head1">Homepage</a>
+      <a href="find.html" class=" head head2">Find Us</a>
+      <a href="form.html" class="head  head3">Contact</a>
+    head 
     </header>
     <main>
       <div class="photo">
-        <section>
+         <section>
           <h2>Welcome to the last pub of the 12's tour</h2>
           <hr>
           <div class="photo2">
@@ -55,7 +55,7 @@
       <div class="clock">
         <section >
           <!-- <i class="fa-solid fa-clock fa-10x"></i> -->
-          <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 0a256 256 0 1 1 0 512A256 256 0 1 1 256 0zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
+          <svg  class="clock2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 0a256 256 0 1 1 0 512A256 256 0 1 1 256 0zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
           <h3>Open7j/7</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur.
@@ -80,7 +80,9 @@
       </section>
     </main>
     <footer>
+      <div class="p2">
       <p>Copyrigh - The world's end-2024</p>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
