--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           Omnis laudantium accusantium corporis!
         </p>
         <button type="button" class="button2">BOOK NOW</button>
-        <a href="#wa">
+        <!-- <a href="#wa">
           <i class="fas fa-arrow-up fa-2x my-10 backtotop"></i>
 
-        </a>
+        </a> -->
       </section>
     </main>
     <footer>
