--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="div3">
         <section><img src="images/person.jpg" alt="" /></section>
       </div>
-
+<div class="div4">
       <section class="alien">
         <h3>Wanna meet alien?</h3>
         <p>
@@ -87,7 +87,7 @@
           <i class="fas fa-arrow-up fa-2x my-10 backtotop"></i>
 
         </a> -->
-      </section>
+      </section></div>
     </main>
     <footer>
       <div class="p2">
