--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
           <i class="fas fa-arrow-up fa-2x my-10 backtotop"></i>
 
         </a> -->
-      </section></div>
+      </section>
+    </div>
     </main>
     <footer>
       <div class="p2">
